--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -111,8 +111,8 @@
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
         <section class="content_hero hero" style="background-color:#337E7D;">
-            <div class="wrapper">
-                <!-- <div class="hero_card">
+            <!-- <div class="wrapper">
+                <div class="hero_card">
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
                             <a href="#" class="category-slug">
@@ -127,8 +127,8 @@
                             </a>
                         </div>
                     </div>
-                </div> -->
-            </div>
+                </div>
+            </div> -->
             <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
                      style="background-image:url(../static/img/hero-small.png);">
