--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -357,6 +357,14 @@
 
 <script src="../static/js/main.min.js"></script>
 
+<script>
+(function($) {
+  $(function() {
+    $('.expandable_contents').css('display','none');
+  });
+}(jQuery));
+</script>
+
 </body>
 
 </html>
