--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -102,11 +102,11 @@
         </a>
     </div>
 
-    <header class="header" role="banner">
+    <div class="header" role="banner">
         <div class="wrapper">
             <div class="demo-placeholder">header placeholder</div>
         </div>
-    </header><!-- END .header -->
+    </div><!-- END .header -->
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
