--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -108,7 +108,7 @@
         </div>
     </div><!-- END .header -->
 
-    <main class="content content__2-1 content__bleedbar" id="main" role="main">
+    <div class="content content__2-1 content__bleedbar" id="main" role="main">
 
         <!-- <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
@@ -339,13 +339,13 @@
             </aside><!-- END .content_sidebar -->
 
         </div><!-- END .content_wrapper -->
-    </main><!-- END .content -->
+    </div><!-- END .content -->
 
-    <footer class="footer" role="contentinfo">
+    <div class="footer" role="contentinfo">
         <div class="wrapper">
             <div class="demo-placeholder">footer placeholder</div>
         </div>
-    </footer><!-- END .footer -->
+    </div><!-- END .footer -->
 
 <!--
     ============
