--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -102,13 +102,13 @@
         </a>
     </div>
 
-    <div class="header" role="banner">
+    <header class="header" role="banner">
         <div class="wrapper">
             <div class="demo-placeholder">header placeholder</div>
         </div>
-    </div><!-- END .header -->
+    </header><!-- END .header -->
 
-    <div class="content content__2-1 content__bleedbar" id="main" role="main">
+    <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
         <!-- <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
@@ -165,8 +165,8 @@
                                 </span>
                             </a>
                         </div>
-                        <div class="expandable_contents padded-container">
-                            <form class="padded-container_body" id="barebones-content" method="get">
+                        <div class="expandable_content padded-container">
+                            <form class="padded-container_body-" id="barebones-content" method="get">
                                 <div class="form-group">
                                     <label class="form-group_header">
                                         Categories
@@ -339,13 +339,13 @@
             </aside><!-- END .content_sidebar -->
 
         </div><!-- END .content_wrapper -->
-    </div><!-- END .content -->
+    </main><!-- END .content -->
 
-    <div class="footer" role="contentinfo">
+    <footer class="footer" role="contentinfo">
         <div class="wrapper">
             <div class="demo-placeholder">footer placeholder</div>
         </div>
-    </div><!-- END .footer -->
+    </footer><!-- END .footer -->
 
 <!--
     ============
