--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -148,7 +148,7 @@
             <section class="content_main">
 
                 <div class="post-preview-filters">
-                    <div class="expandable">
+                    <div class="expandables">
                         <div class="expandable_header">
                             <!-- <h5>Blog filtered by</h5>
                             <ul class="list list__horizontal">
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="expandable_content padded-container">
-                            <form class="padded-container_body-" id="barebones-content" method="get">
+                            <form class="padded-container_body" id="barebones-content" method="get">
                                 <div class="form-group">
                                     <label class="form-group_header">
                                         Categories
@@ -356,14 +356,6 @@
 -->
 
 <script src="../static/js/main.min.js"></script>
-
-<script>
-(function($) {
-  $(function() {
-    $('.expandable_contents').css('display','none');
-  });
-}(jQuery));
-</script>
 
 </body>
 
