--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -148,7 +148,7 @@
             <section class="content_main">
 
                 <div class="post-preview-filters">
-                    <div class="expandables">
+                    <div class="expandable">
                         <div class="expandable_header">
                             <!-- <h5>Blog filtered by</h5>
                             <ul class="list list__horizontal">
@@ -157,12 +157,12 @@
                             <a class="expandable_target btn btn-secondary"
                                href="#barebones-content">
                                 Filter posts&nbsp;&nbsp;
-                                <span class="expandable_cue-open">
+                                <!-- <span class="expandable_cue-open">
                                     <span class="cf-icon cf-icon-down"></span>
                                 </span>
                                 <span class="expandable_cue-close">
                                     <span class="cf-icon cf-icon-up"></span>
-                                </span>
+                                </span> -->
                             </a>
                         </div>
                         <div class="expandable_content padded-container">
