--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -141,6 +141,8 @@
             </div>
         </section> --><!-- END .content_hero -->
 
+        <div class="wrapper"></div>
+
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
         <div class="content_bar"></div>
 
