--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -103,7 +103,7 @@
     </div>
 
     <header class="header" role="banner">
-        <div class="wrapper">
+        <div class="wrappers">
             <div class="demo-placeholder">header placeholder</div>
         </div>
     </header><!-- END .header -->
