--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -231,7 +231,7 @@
                     </div>
                     <a class="summary" href="#">
                         <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
-                        <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
+                        <p class="summary_text summary_text__max">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                         <p class="summary_byline">By Patrice Ficklin</p>
                     </a>
                 </article>
@@ -280,7 +280,7 @@
                     </div>
                     <a class="summary" href="#">
                         <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
-                        <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
+                        <p class="summary_text summary_text__max">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                         <p class="summary_byline">By Patrice Ficklin</p>
                     </a>
                 </article>
