--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -214,8 +214,9 @@
                                     </div> -->
                                 </div>
                                 <div class="filters_actions form-actions form-group">
-                                    <a href="/blog/" class="btn btn-warning btn-link form-actions_item">Reset filters</a>
+                                    <input type="reset" value="Reset filters" class="btn btn-warning btn-link form-actions_item">
                                     <input type="submit" value="Apply filters" class="btn form-actions_item">
+
                                 </div>
                             </form>
                         </div>
