--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -169,7 +169,7 @@
                                 <div class="filter_cols">
                                     <div class="filter_col filter_col-1-3">
                                         <div class="form-group">
-                                            <label class="form-group_header">
+                                            <label class="form-label-header">
                                                 Categories
                                             </label>
                                             <label class="form-group_item form-label">
@@ -192,13 +192,13 @@
                                     </div>
                                     <div class="filter_col filter_col-1-3">
                                         <div class="form-group">
-                                            <label class="form-group_header">
+                                            <label class="form-label-header">
                                                 Topics
                                             </label>
                                             <input type="text" name="filter_tags" value="">
                                         </div>
                                         <div class="form-group">
-                                            <label class="form-group_header">
+                                            <label class="form-label-header">
                                                 Author
                                             </label>
                                             <input type="text" name="filter_author" value="">
@@ -206,7 +206,7 @@
                                     </div>
                                     <!-- <div class="filter_col filter_col-1-3">
                                         <div class="form-group">
-                                            <label class="form-group_header">
+                                            <label class="form-label-header">
                                                 Date range
                                             </label>
                                         </div>
