Update form pattern usage.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -166,8 +166,8 @@
                         </div>
                         <div class="expandable_content padded-container">
                             <form class="padded-container_body" id="post-filters-form" method="get">
-                                <div class="filter_cols">
-                                    <div class="filter_col filter_col-1-3">
+                                <div class="form-l form-l__flush">
+                                    <div class="form-l_col form-l_col-1-3">
                                         <div class="form-group">
                                             <label class="form-label-header">
                                                 Categories
@@ -190,7 +190,7 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="filter_col filter_col-1-3">
+                                    <div class="form-l_col form-l_col-1-3">
                                         <div class="form-group">
                                             <label class="form-label-header">
                                                 Topics
@@ -204,7 +204,7 @@
                                             <input type="text" name="filter_author" value="">
                                         </div>
                                     </div>
-                                    <!-- <div class="filter_col filter_col-1-3">
+                                    <!-- <div class="form-l_col form-l_col-1-3">
                                         <div class="form-group">
                                             <label class="form-label-header">
                                                 Date range
@@ -212,7 +212,7 @@
                                         </div>
                                     </div> -->
                                 </div>
-                                <div class="filter-actions filter-actions__right form-actions">
+                                <div class="form-actions form-actions__right-on-med">
                                     <input type="reset" value="Reset filters" class="btn btn-warning btn-link form-actions_item">
                                     <input type="submit" value="Apply filters" class="btn form-actions_item">
                                 </div>
