Renames visually-hidden to u-visually-hidden to match other naming conventions.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -117,7 +117,7 @@
                         <div class="hero_card-padding">
                             <a href="#" class="category-slug">
                                 <span class="cf-icon cf-icon-help"></span>
-                                <span class="visually-hidden">Category:</span>
+                                <span class="u-visually-hidden">Category:</span>
                                 Announcements &amp; updates
                             </a>
                             <a class="summary" href="#">
@@ -227,7 +227,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_left">
                             <span class="cf-icon cf-icon-help"></span>
-                            <span class="visually-hidden">Category:</span>
+                            <span class="u-visually-hidden">Category:</span>
                             Announcements &amp; updates
                         </a>
                     </div>
@@ -245,7 +245,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_left">
                             <span class="cf-icon cf-icon-help"></span>
-                            <span class="visually-hidden">Category:</span>
+                            <span class="u-visually-hidden">Category:</span>
                             Consumer information
                         </a>
                     </div>
@@ -276,7 +276,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_left">
                             <span class="cf-icon cf-icon-help"></span>
-                            <span class="visually-hidden">Category:</span>
+                            <span class="u-visually-hidden">Category:</span>
                             Engagement
                         </a>
                     </div>
@@ -294,7 +294,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_left">
                             <span class="cf-icon cf-icon-help"></span>
-                            <span class="visually-hidden">Category:</span>
+                            <span class="u-visually-hidden">Category:</span>
                             Innovation &amp; data
                         </a>
                     </div>
