Updates demo landing page.

--- a/index.html
+++ b/index.html
@@ -106,37 +106,39 @@
         <div class="wrapper content_wrapper">
             <section class="content_main">
 
-                <section class="demo-cols">
+                <section>
 
-                    <div class="demo-col-12 demo-spaced">
+                    <div class="demo-spaced">
                         <h2>Demos</h2>
                     </div>
 
-                    <div class="demo-col-6 demo-spaced">
-                        <div class="meta-header">
-                            <span class="meta-header_left category-slug">
-                                Blog static demos
-                            </span>
+                    <div class="demo-cols">
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Static demos
+                                </span>
+                            </div>
+                            <h3><a href="blog/landing.html">Blog landing page</a></h3>
+                            <h3><a href="blog/post.html">Blog post</a></h3>
                         </div>
-                        <h3><a href="blog/landing.html">Landing page</a></h3>
-                        <h3><a href="blog/post.html">Post</a></h3>
-                    </div>
-                    <div class="demo-col-6 demo-spaced">
-                        <div class="meta-header">
-                            <span class="meta-header_left category-slug">
-                                Blog Sheer demos
-                            </span>
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Sheer demos
+                                </span>
+                            </div>
+                            <h3><a href="blog/index.html">Blog landing page</a></h3>
+                            <h3><a href="blog/post.html">Blog post</a></h3>
                         </div>
-                        <h3><a href="blog/index.html">Landing page</a></h3>
-                        <h3><a href="blog/post.html">Post</a></h3>
-                    </div>
-                    <div class="demo-col-6 demo-spaced">
-                        <div class="meta-header">
-                            <span class="meta-header_left category-slug">
-                                Newsroom static demos
-                            </span>
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Static demos
+                                </span>
+                            </div>
+                            <h3><a href="newsroom/landing.html">Newsroom landing page</a></h3>
                         </div>
-                        <h3><a href="newsroom/landing.html">Landing page</a></h3>
                     </div>
 
                 </section>
@@ -147,12 +149,13 @@
                 <div class="demo-spaced">
                     <h2>Documentation</h2>
                 </div>
+
                 <div class="demo-spaced">
-                    <h3 class="header-slug">
-                        <span class="header-slug_inner">
+                    <div class="meta-header">
+                        <h3 class="meta-header_left category-slug">
                             Section docs
-                        </span>
-                    </h3>
+                        </h3>
+                    </div>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/blog-docs/">Blog docs</a>
@@ -160,11 +163,11 @@
                     </ul>
                 </div>
                 <div class="demo-spaced">
-                    <h3 class="header-slug">
-                        <span class="header-slug_inner">
+                    <div class="meta-header">
+                        <h3 class="meta-header_left category-slug">
                             Global patterns
-                        </span>
-                    </h3>
+                        </h3>
+                    </div>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/media-object/">Media object</a>
@@ -184,11 +187,11 @@
                     </ul>
                 </div>
                 <div class="demo-spaced">
-                    <h3 class="header-slug">
-                        <span class="header-slug_inner">
-                            Less docs
-                        </span>
-                    </h3>
+                    <div class="meta-header">
+                        <h3 class="meta-header_left category-slug">
+                            Less docs Sheer demos
+                        </h3>
+                    </div>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/utilities/">Utilities</a>
@@ -202,7 +205,7 @@
 
     <footer class="footer" role="contentinfo">
         <div class="wrapper">
-            <a href="https://github.com/cfpb/cfgov-refresh">View the GitHub repository</a>
+            <a class="demo-col-12" href="https://github.com/cfpb/cfgov-refresh">View the GitHub repository</a>
         </div>
     </footer><!-- END .footer -->
 
