Refacotrs filter list.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -161,28 +161,56 @@
                                     </span>
                                 </a>
                             </div>
-                            <div class="expandable_header-left">
-                                <dl class="list list__filtered-by list__horizontal">
-                                    <dt class="list_label list_item">
-                                        Filtered by
-                                    </dt>
-                                    <dd class="list_item">
-                                        <span class="list_link">Lorem,</span>
-                                    </dd>
-                                    <dd class="list_item">
-                                        <span class="list_link">Ipsum,</span>
-                                    </dd>
-                                    <dd class="list_item">
-                                        <span class="list_link">Dolor,</span>
-                                    </dd>
-                                    <dd class="list_item">
-                                        <span class="list_link">Sit,</span>
-                                    </dd>
-                                    <dd class="list_item">
-                                        <span class="list_link">Amet,</span>
-                                    </dd>
-                                </dl>
-                            </div>
+                            <dl class="filtered-by filtered-by__align-with-btn list list__horizontal">
+                                <dt class="list_item">
+                                    <span class="filtered-by_header">Filtered by</span>
+                                </dt>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Lorem,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Ipsum,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Dolor,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Sit,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Amet,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Lorem,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Ipsum,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Dolor,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Sit,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Amet,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Lorem,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Ipsum,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Dolor,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Sit,</span>
+                                </dd>
+                                <dd class="list_item">
+                                    <span class="filtered-by_filter">Amet,</span>
+                                </dd>
+                            </dl>
                         </div>
                         <div class="expandable_content padded-container">
                             <form class="padded-container_body" id="post-filters-form" method="get">
