Removes accidental 'div' class. Updates post filter docs.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -149,7 +149,7 @@
 
                 <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
-                        <div class="div expandable_header-right">
+                        <div class="expandable_header-right">
                             <a class="expandable_target btn btn-secondary"
                                href="#post-filters-form">
                                 Filter posts&nbsp;&nbsp;
