--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="demo-spaced">
                     <div class="meta-header">
                         <h3 class="meta-header_left category-slug">
-                            Less docs Sheer demos
+                            Less docs
                         </h3>
                     </div>
                     <ul class="list list__horizontal">
