Responsive filter tweaks.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -149,7 +149,7 @@
 
                 <div class="expandable expandable__expanded">
                     <div class="expandable_header expandable_header__spaced">
-                        <div class="expandable_header-right expandable_header-right__on-medium">
+                        <div class="expandable_header-right expandable_header-right__float-on-medium">
                             <a class="expandable_target btn btn-secondary"
                                href="#post-filters-form">
                                 Filter posts&nbsp;&nbsp;
@@ -161,7 +161,7 @@
                                 </span>
                             </a>
                         </div>
-                        <dl class="filtered-by filtered-by__align-with-btn list list__horizontal">
+                        <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
                             <dt class="list_item">
                                 <span class="filtered-by_header">Filtered by</span>
                             </dt>
