Fixes categories on Sheer blog landing.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -221,19 +221,19 @@
                                             Categories
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="consumer">
+                                            <input type="checkbox" name="filter_category" value="announcements">
                                             Announcements &amp; updates
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="regulation & compliance">
+                                            <input type="checkbox" name="filter_category" value="consumer">
                                             Consumer information
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="innovation">
+                                            <input type="checkbox" name="filter_category" value="engagement">
                                             Engagement
                                         </label>
                                         <label class="form-group_item form-label">
-                                            <input type="checkbox" name="filter_category" value="announcements">
+                                            <input type="checkbox" name="filter_category" value="innovation">
                                             Innovation &amp; data
                                         </label>
                                     </div>
