--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -243,13 +243,29 @@
                                         <label class="form-label-header">
                                             Topics
                                         </label>
-                                        <input type="text" name="filter_tags" value="">
+                                        <!-- <input type="text" name="filter_tags" value=""> -->
+                                        <select name="filter_tags" multiple>
+                                            <option value="tag1">Tag 1</option>
+                                            <option value="tag2">Tag 2</option>
+                                            <option value="tag3">Tag 3</option>
+                                            <option value="tag4">Tag 4</option>
+                                            <option value="tag5">Tag 5</option>
+                                            <option value="tag6">Tag 6</option>
+                                        </select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label-header">
                                             Author
                                         </label>
-                                        <input type="text" name="filter_author" value="">
+                                        <!-- <input type="text" name="filter_author" value=""> -->
+                                        <select name="filter_author" multiple>
+                                            <option value="author1">Author 1</option>
+                                            <option value="author2">Author 2</option>
+                                            <option value="author3">Author 3</option>
+                                            <option value="author4">Author 4</option>
+                                            <option value="author5">Author 5</option>
+                                            <option value="author6">Author 6</option>
+                                        </select>
                                     </div>
                                 </div>
                                 <!-- <div class="form-l_col form-l_col-1-3">
